[package]
name = "opengles_graphics"
version = "0.1.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "Victor Brekenfeld <github@drakulix.de>"
]
keywords = ["opengles", "graphics", "2d", "piston"]
description = "An OpenGL ES 2D back-end for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Drakulix/opengles_graphics.git"
homepage = "https://github.com/Drakulix/opengles_graphics"
build = "build.rs"

[lib]
name = "opengles_graphics"
path = "src/lib.rs"

[dependencies]
image = "0.12.0"
rusttype = "0.2.0"
shaders_graphics2d_gles = { version = "0.2.0", path = "./shaders" }
piston-texture = "0.5.0"
piston2d-graphics = "0.21.0"
shader_version = "0.2.0"
fnv = "1.0.2"

[dev-dependencies]
piston = "0.31.3"
pistoncore-sdl2_window = "0.40.0"

[build-dependencies]
gl_generator = "0.5.0"
khronos_api = "0.0.8"
