[package]
name = "shaders_graphics2d_gles"
version = "0.2.0"
authors = ["bvssvni <bvssvni@gmail.com>",
"Victor Brekenfeld <github@drakulix.de>"]
keywords = ["shaders", "2D", "graphics", "gles"]
description = "Shaders for 2D graphics in Rust"
license = "MIT"
repository = "https://github.com/Drakulix/opengles_graphics.git"
homepage = "https://github.com/Drakulix/opengles_graphics/tree/master/shaders/"

[lib]
name = "shaders_graphics2d_gles"
path = "lib.rs"
